--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["codecounty", "titlecase", "záéíóúñü"]
+  "cSpell.words": ["codecounty", "dias", "funcion", "titlecase", "záéíóúñü"]
 }
